--- a/pom.xml
+++ b/pom.xml
@@ -2,31 +2,43 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>com.choudoufu</groupId>
-	<artifactId>choudoufu.root</artifactId>
-	<name>choudoufu.root</name>
+	<groupId>com.choudou5</groupId>
+	<artifactId>choudou5.root</artifactId>
+	<name>choudou5.root</name>
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
 		<project.version>0.0.1</project.version>
-
+		<hutool.version>4.0.0</hutool.version>
 	</properties>
 
 	<modules>
-		<module>choudoufu.doc</module>
-		<module>choudoufu.root.abstract</module>
-		<module>choudoufu.root.cache</module>
-		<module>choudoufu.root.cloud</module>
-		<module>choudoufu.root.flow</module>
-		<module>choudoufu.root.message</module>
-		<module>choudoufu.root.nosql</module>
-		<module>choudoufu.root.search</module>
+		<module>choudou5.doc</module>
+		<module>choudou5.root.abstract</module>
+		<module>choudou5.root.cache</module>
+		<module>choudou5.root.cloud</module>
+		<module>choudou5.root.flow</module>
+		<module>choudou5.root.message</module>
+		<module>choudou5.root.nosql</module>
+		<module>choudou5.root.search</module>
+		<module>choudou5.root.security</module>
 	</modules>
 
 
 	<dependencies>
-	 
+
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-core</artifactId>
+			<version>${hutool.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-http</artifactId>
+			<version>${hutool.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
