add dingtalk api add sms helper

--- a/choudou5.root.message/pom.xml
+++ b/choudou5.root.message/pom.xml
@@ -16,7 +16,8 @@
 		<module>choudou5.root.message.dingtalk</module>
 		<module>choudou5.root.message.wework</module>
 		<module>choudou5.root.message.mq</module>
-		
+		<module>choudou5.root.message.sms</module>
+
 	</modules>
 
 	<dependencies>
