--- a/choudou5.message/choudou5.message.sms/pom.xml
+++ b/choudou5.message/choudou5.message.sms/pom.xml
@@ -15,15 +15,9 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.6</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.2</version>
+			<groupId>com.choudou5</groupId>
+			<artifactId>choudou5.base.common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- 阿里大鱼 -->
