--- a/choudou5.file/choudou5.file.store/pom.xml
+++ b/choudou5.file/choudou5.file.store/pom.xml
@@ -15,6 +15,13 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.choudou5</groupId>
+			<artifactId>choudou5.base.common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>com.aliyun.oss</groupId>
 			<artifactId>aliyun-sdk-oss</artifactId>
 			<version>2.8.2</version>
