--- a/choudou5.security/choudou5.security.certification/pom.xml
+++ b/choudou5.security/choudou5.security.certification/pom.xml
@@ -14,7 +14,14 @@
 
 
 	<dependencies>
-	
+
+		<dependency>
+			<groupId>com.choudou5</groupId>
+			<artifactId>choudou5.base.common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		
 	</dependencies>
 
 </project>
