--- a/choudou5.base/choudou5.base.common/pom.xml
+++ b/choudou5.base/choudou5.base.common/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>dozer</artifactId>
 			<version>${dozer.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.2.1</version>
+		</dependency>
 
 	</dependencies>
 
