--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<slf4j-api.version>1.7.25</slf4j-api.version>
 		<dozer.version>5.5.1</dozer.version>
 		<fastjson.version>1.2.24</fastjson.version>
+		<ehcache-core.version>2.6.11</ehcache-core.version>
 		<hutool.version>4.0.0</hutool.version>
 	</properties>
 
