--- a/choudou5.rpc/choudou5.rpc.dubbo/pom.xml
+++ b/choudou5.rpc/choudou5.rpc.dubbo/pom.xml
@@ -20,12 +20,18 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.alibaba/dubbo -->
+		<!-- dubbo -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
 			<version>2.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.10</version>
+		</dependency>
+
 
 		<!-- test -->
 		<dependency>
@@ -40,7 +46,12 @@
 			<version>4.3.10.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.lianj.user.center.api</groupId>
+			<artifactId>lianj.user.center.api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
