--- a/choudou5.rpc/choudou5.rpc.dubbo/pom.xml
+++ b/choudou5.rpc/choudou5.rpc.dubbo/pom.xml
@@ -47,13 +47,13 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
+	<!--	<dependency>
 			<groupId>com.lianj.user.center.api</groupId>
 			<artifactId>lianj.user.center.api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-
+-->
 
 	</dependencies>
 
