add pinyin tool and address tool

--- a/choudou5.base/choudou5.base.common/pom.xml
+++ b/choudou5.base/choudou5.base.common/pom.xml
@@ -62,6 +62,13 @@
 			<version>3.2.1</version>
 		</dependency>
 
+		<!-- 拼音-->
+		<dependency>
+			<groupId>com.github.stuxuhai</groupId>
+			<artifactId>jpinyin</artifactId>
+			<version>1.1.8</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
